config sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,9 @@
 sonar.projectKey=romariomelo_sonar-test
 sonar.organization=romariomelo
-
+sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.exclusions=**/*.spec.js
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.js
+sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
