--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.tests=src
 sonar.test.inclusions=**/*.spec.js
 sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.pullrequest.github.summary_comment=true
